--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,21 @@
 .App {
   display: flex;
+  overflow-x: hidden;
 }
-.App .container{
+.App .container {
   flex-grow: 1;
   padding: 0 60px;
+}
+@media screen and (max-width: 500px) {
+  .sidebar {
+    display: none;
+  }
+  .user-list {
+    display: none;
+  }
+}
+@media screen and (min-width: 501px) {
+  .home .create-post-mobile {
+    display: none !important;
+  }
 }
