--- a/src/pages/signup/Signup.css
+++ b/src/pages/signup/Signup.css
@@ -1,6 +1,6 @@
 .auth-form {
   max-width: 450px;
-  margin: 20px auto;
+  margin: 0 auto;
   padding: 40px;
   /* border: 1px solid #ddd; */
   /* box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.05); */
@@ -9,4 +9,30 @@
 
 .auth-form h2 {
   color: var(--primary-color);
+}
+
+.auth-form .head-signup {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  align-items: center;
+}
+
+.auth-form .head-signup .view-image {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.auth-form .head-signup .view-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.auth-form .head-signup .view-image .placeholder {
+  width: 100%;
+  height: 100%;
+  background-color: #eee;
 }
