--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,14 @@
 .App {
   display: flex;
-  overflow-x: hidden;
 }
 .App .container {
   flex-grow: 1;
   padding: 0 60px;
 }
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 600px) {
+  .App .container {
+    padding: 0 10px;
+  }
   .sidebar {
     display: none;
   }
