--- a/src/index.css
+++ b/src/index.css
@@ -11,11 +11,11 @@
 
 * {
   box-sizing: border-box;
+  font-family: Poppins, sans-serif;
 }
 
 /* base styles */
 body {
-  font-family: Poppins, sans-serif;
   margin: 0;
   font-size: 1.1em;
   background: var(--bg-color);
@@ -43,15 +43,26 @@ ul {
 .btn {
   background: #fff;
   padding: 8px 12px;
-  border-radius: 4px;
+  border-radius: 6px;
   color: var(--primary-color);
   cursor: pointer;
   font-size: 1em;
   border: 1px solid var(--primary-color);
+  /* transition: all ease-in 150ms; */
 }
 .btn:hover {
   color: #fff;
   background-color: var(--primary-color);
+}
+.btn.auth {
+  background: none;
+  border: 0;
+  font-weight: 500;
+  font-size: 90%;
+  color: var(--primary-color);
+}
+.btn.auth:hover {
+  background: rgba(141, 105, 241, 0.1);
 }
 
 /* forms */
