--- a/src/pages/home/Filter.css
+++ b/src/pages/home/Filter.css
@@ -23,6 +23,10 @@
   padding: 5px 10px;
   border-right: 1px solid #ccc;
 }
+
+.filter-bar nav .filter-item:last-of-type {
+  border: 0;
+}
 .filter-bar nav .text {
   /* min-width: 50px; */
   text-align: center;
