--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -16,3 +16,40 @@
 .home .create-post-mobile img {
   filter: invert(40%);
 }
+
+.home .change-view-bar {
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+  padding: 10px 0;
+}
+
+.home .change-view-bar img {
+  filter: invert(30%);
+}
+
+.home .change-view-bar button {
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  background-color: #fbfbfb;
+  color: #333;
+  box-shadow: 0px 0px 2px 0px rgb(0 0 0 / 20%);
+  border-radius: 6px;
+  outline: none;
+  border: none;
+}
+
+.home .change-view-bar button.active {
+  color: var(--primary-color);
+}
+.home .change-view-bar button:disabled img {
+  filter: invert(15%) sepia(76%) saturate(7497%) hue-rotate(258deg)
+    brightness(92%) contrast(85%);
+}
+
+.home .change-view-bar button img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
