--- a/src/components/OnlineUsers.css
+++ b/src/components/OnlineUsers.css
@@ -15,11 +15,14 @@
 }
 .user-list .user-list-item {
   display: flex;
+  color: inherit;
   justify-content: flex-end;
   align-items: center;
   padding: 10px 0;
   margin: 0 auto;
   border-bottom: 1px solid #eee;
+  text-decoration: none;
+  cursor: pointer;
 }
 .user-list .wrapper {
   margin-left: 10px;
