--- a/src/components/ProjectGrid.css
+++ b/src/components/ProjectGrid.css
@@ -9,6 +9,7 @@
 }
 
 .project-card {
+  position: relative;
   padding: 16px;
   background-color: #fbfbfb;
   display: block;
@@ -20,7 +21,6 @@
 }
 
 .project-card:hover {
-  cursor: pointer;
   box-shadow: 0px 0px 2px 0px rgb(0 0 0 / 50%);
 }
 
