--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -13,6 +13,12 @@
 }
 
 .sidebar .user {
+  display: flex;
+  color: inherit;
+  text-decoration: none;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
   font-weight: bold;
   text-align: center;
   letter-spacing: 1px;
@@ -20,12 +26,16 @@
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
 
+.sidebar .user:hover {
+  cursor: pointer;
+}
+
 .sidebar nav {
   margin-top: 80px;
   margin-left: 20px;
 }
 
-.sidebar a {
+.sidebar nav a {
   text-decoration: none;
   display: flex;
   align-items: center;
@@ -36,21 +46,21 @@
   transition: all ease-in 0.1s;
 }
 
-.sidebar a:hover {
+.sidebar nav a:hover {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-.sidebar a.active {
+.sidebar nav a.active {
   background-color: var(--bg-color);
   border-radius: 15px 0 0 15px;
   color: #555;
 }
 
-.sidebar a img {
+.sidebar nav a img {
   filter: invert(100%);
   width: 28px;
 }
 
-.sidebar a.active img {
+.sidebar nav a.active img {
   filter: invert(40%);
 }
