--- a/src/pages/home/Filter.css
+++ b/src/pages/home/Filter.css
@@ -1,24 +1,18 @@
-.filter-bar {
-  width: 100%;
-  /* height: 80px; */
-  margin-top: 20px;
-  color: #555;
-  font-size: 0.9em;
-  /* border-bottom: 1px solid rgba(176, 174, 174, 0.3); */
-  background-color: #fbfbfb;
-  border-radius: 6px;
-  box-shadow: 0px 0px 2px 0px rgb(0 0 0 / 20%);
-}
-
 .filter-bar nav {
   display: flex;
-  flex-flow: row wrap;
-  /* gap: 10px; */
-  margin-top: 10px;
+
+  gap: 20px;
 }
 
+.filter-bar nav .select {
+  flex: 1 0 0;
+  display: flex;
+  justify-content: flex-end;
+}
+
+/*
 .filter-bar nav .filter-item {
-  /* min-width: 50px; */
+
   text-align: center;
   padding: 5px 10px;
   border-right: 1px solid #ccc;
@@ -28,7 +22,7 @@
   border: 0;
 }
 .filter-bar nav .text {
-  /* min-width: 50px; */
+
   text-align: center;
   padding: 5px 10px;
   font-weight: bold;
@@ -40,6 +34,6 @@
 }
 
 .filter-bar nav .filter-item.active {
-  /* background-color: #555; */
+
   color: var(--primary-color);
-}
+} */
