--- a/src/pages/signup/Signup.css
+++ b/src/pages/signup/Signup.css
@@ -11,28 +11,68 @@
   color: var(--heading-color);
 }
 
-.auth-form .head-signup {
+.head {
   display: flex;
   justify-content: space-between;
   flex-direction: row;
+  align-items: flex-start;
+}
+
+.head .imagediv {
+  display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
-.auth-form .head-signup .view-image {
+.view-image {
   width: 80px;
   height: 80px;
   border-radius: 50%;
   overflow: hidden;
+  position: relative;
 }
 
-.auth-form .head-signup .view-image img {
+.view-image:hover .img-hover {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.view-image img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.auth-form .head-signup .view-image .placeholder {
+.view-image .img-hover {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  background-color: #eee;
+  display: none;
+  background-color: rgba(251, 251, 251, 0.9);
+  font-size: 0.8rem;
+  cursor: pointer;
+}
+
+.view-image img:hover .img-hover {
+  display: block;
+}
+
+.head label {
+  font-size: 0.7rem;
+  text-decoration: underline;
+  margin: 5px auto;
+  color: #333;
+  cursor: pointer;
+}
+
+.head label:hover {
+  color: #000;
+}
+
+.head input[type="file"] {
+  display: none;
 }
