--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,6 @@ body {
   background: var(--bg-color);
 }
 a {
-  text-decoration: none;
   color: inherit;
 }
 
@@ -87,6 +86,11 @@ ul {
   border-radius: 6px;
   outline: none;
   border: none;
+}
+
+.edit-project:hover {
+  color: #f4f4f4;
+  background-color: var(--primary-color);
 }
 
 /* forms */
